--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,7 @@ h1 {
         font-size: 24px !important;
     }
 }
+
 .button {
     background: transparent;
     padding: 0px 20px;
@@ -836,7 +837,7 @@ nav {
 
     img{
         margin: 0 auto;
-        border: 2px solid #948b8b;
+        border: 3px solid #0c112b;
     }
     }
 
@@ -875,6 +876,7 @@ nav {
     }
     }
     .mail{
+        text-align: center;
       input{
         background: #0e0b17;
         color:#eee;
@@ -1504,8 +1506,10 @@ nav {
                @media (min-width: 768px) {
                     padding: 7px;
                     color: #FFFFFF;
-                    background-color: #0c112b;
-                    border: 1px solid #0c112b;
+                   background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                   background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                   background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                   border: 1px solid #0c112b;
                     height: 34px;
                     font-weight: 300;
                     overflow: hidden;
@@ -1518,7 +1522,7 @@ nav {
                         height: 0px;
                         border-style: solid;
                         border-width: 16px 20px 16px 0;
-                        border-color: transparent #0c112b transparent transparent;
+                        border-color: transparent #191e41 transparent transparent;
                         display: inline-block;
                         vertical-align: middle;
                         transform: rotate(180deg);
@@ -1526,7 +1530,7 @@ nav {
                         top: 1px;
                         z-index: 99;
                         right: -3px;
-                        background: #fcf5f5;
+                        background: #fff;
                     }
                 }
 
@@ -1557,8 +1561,9 @@ nav {
                margin-top: 15px;}
         h5{
             color: #fff;
-            background: #0c112b;
-            margin: 0;
+            background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+            background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+            background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);            margin: 0;
             padding: 9px;
             text-align: center;
             font-size: 15px;
@@ -1653,8 +1658,9 @@ nav {
             button{
                 font-style: italic;
                 color: #fff;
-                background: #0c112b;
-                padding: 5px 45px;
+                background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);                padding: 5px 45px;
                 outline: none;
                 -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
                 -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
@@ -1700,10 +1706,218 @@ nav {
         }
     }
 }
+}
 .reqruipment {
-    margin-top: 200px;
+    margin-top: 250px;
     @media (max-width: 991px) {
-        margin-top: 100px;
+        margin-top: 150px;
     }
+    .accordion-toggle{
+        font-style: italic;
+        color: #fff;
+        background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+        background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+        background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+        padding: 4px 0;
+        outline: none;
+        transition:all 0.5s;
+        border-color: #141834;
+        margin-bottom: 5px;
+        width: 100%;
+        &:hover {
+            margin-top: 3px;
+        }
+        @media (max-width: 470px) {
+            font-size:12px;
+            padding: 4px 0;
+        }
+
+              &:after {
+                /* symbol for "opening" panels */
+                font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
+                content: "\e114";    /* adjust as needed, taken from bootstrap.css */
+                float: right;        /* adjust as needed */
+                color: #fff;         /* adjust as needed */
+                margin: 0 30px;
+                font-style: normal;
+            }
+    }
+
+    .accordion-toggle.collapsed:after {
+                /* symbol for "collapsed" panels */
+                content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+            }
+        .work-buttons{
+            margin: 5px 0;
+            .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border:none;
+                display: inline-block;
+            }
+
+            .nav-stacked > li {
+                margin-top: 0;
+                text-align: center;
+            }
+            .nav-tabs > li > a {
+                color:#848080;
+                margin: 0;
+                border:none;
+                padding: 10px 0;
+                display: inline-block;
+                font-weight: 700;
+                font-size: 16px;
+                @media (max-width: 470px) {
+                    font-size:12px;
+                    padding: 7px;
+                }
+
+
+            }
+            .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
+                color: #161a39;
+                z-index: 99;
+                transition: all 0.5s ease 0s;
+            }
+            .nav-tabs > li.active > a {
+                color: #161a39;
+                z-index: 100;
+                border:none;
+            }
+            .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+                color: #161a39;
+                transition: all 0.5s ease 0s;
+                border:none;
+            }
+            .nav-tabs>li>a:hover{
+                border:none;
+                background: transparent;
+            }
+            .nav-tabs{
+                border:none;
+                li:before {
+                    content: ".";
+                    font-size: 60px;
+                    line-height: 5px;
+                    margin-right: 10px;
+                    color: red;
+                }
+
+            }
+
+        }
+    .tab-content{
+        .tab-pane{
+            padding: 0 0 40px 0;
+            h4{
+                color:red;
+                font-style: italic;
+                font-size: 16px;
+                @media (max-width: 470px) {
+                    font-size:14px;
+                }
+                span{
+                    color: #000;
+                    font-style: italic;
+                    font-size: 16px;
+                    @media (max-width: 470px) {
+                        font-size:14px;
+                    }
+                }
+            }
+            hr{
+                border-color: #000;
+            }
+            .btn{
+                    font-style: italic;
+                    color: #fff;
+                    background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                    background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                    background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                    padding: 5px 45px;
+                    outline: none;
+                    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+                    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+                    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+                    transition:all 0.5s;
+                    border:none;
+                    border-radius:0;
+                    &:hover {
+                        margin-top: 3px;
+                        -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+                        -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+                        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+                    }
+                }
+
+            }
+        #demo,#demo1, #demo3,#demo4, #demo5, #demo6{
+            padding: 20px 0;
+
+            .h4{
+                color: #000!important;
+                text-align: center!important;
+                padding: 0px 0 20px 0;
+                font-style: italic;
+                font-size: 20px;
+            }
+            .file {
+                visibility: hidden;
+                position: absolute;
+                width: 100%;
+            }
+            .form-col-wrapper{
+                .form-col-wrapper{
+                    padding:0;
+                    .form-input-group-m1{
+                        .form-input-addon{
+                            text-align: left;
+                        }
+                    }
+        .form-group{
+            text-align: center;
+            .input-group{
+
+                .input-group-addon{
+                    padding: 2px 10px;
+                    font-size: 12px;
+                }
+                    .form-control{
+                        height:35px;
+                        font-size: 14px;
+                    }
+                    .browse{
+                        outline: none;
+                        border:none;
+                        border-bottom-left-radius: 0;
+                        border-top-left-radius: 0;
+                        height: 35px;
+                        padding: 0px 10px;
+                        font-size: 13px;
+                        color:#fff;
+                        line-height: 35px;
+                        background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                        background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                        background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+                        transition: opacity 0.5s;
+                        &:hover{
+                            opacity: 0.8;
+                        }
+                      }
+                    }
+
+                }
+            }
+          }
+        }
+    }
+    }
+.validetta-inline--bottom{
+    color:red;
+    display: inline-block;
+    text-align: center;
+    padding: 4px;
+    border-radius: 5px;
+    position: relative;
+    top:0;
+    z-index: 9;
 }
-}
+
