--- a/css/style.scss
+++ b/css/style.scss
@@ -67,21 +67,21 @@ h1 {
 
 .button {
     background: transparent;
-    padding: 0px 20px;
+    padding: 0 20px;
     color:#a29a9a;
     font-size: 21px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+    -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
     border: 1px solid rgb(203, 203, 211);
     @media (max-width: 660px) {
         font-size: 15px;
     }
     &:hover {
             margin-top: 3px;
-        -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-        box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 0 0 0 rgba(0,0,0,0.75);
+        -moz-box-shadow: 0 0 20px 0 rgba(0,0,0,0.75);
+        box-shadow: 0 0 20px 0 rgba(0,0,0,0.75);
     }
     &:focus {
         outline: none;
@@ -89,21 +89,21 @@ h1 {
 }
 .button-more {
     background: transparent;
-    padding: 0px 12px;
+    padding: 0 12px;
     color:#434343;
     font-size: 16px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
     border: 1px solid #434343;
     @media (max-width: 991px) {
     margin: 10px 0;
 }
 
     &:hover {
-        -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
-        -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
-        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+        -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
+        -moz-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
         margin-top: 1px;
         @media (max-width: 991px) {
             margin: 10px 0;
@@ -193,9 +193,9 @@ nav {
     &.page-nav {
         background: rgba($white, 0.9);
         margin-top: 0;
-        -webkit-box-shadow: 0px 1px 20px 0px rgba(0,0,0,0.5);
-        -moz-box-shadow: 0px 1px 20px 0px rgba(0,0,0,0.5);
-        box-shadow: 0px 1px 20px 0px rgba(0,0,0,0.5);
+        -webkit-box-shadow: 0 1px 20px 0 rgba(0,0,0,0.5);
+        -moz-box-shadow: 0 1px 20px 0 rgba(0,0,0,0.5);
+        box-shadow: 0 1px 20px 0 rgba(0,0,0,0.5);
     }
 
     .brand-area {
@@ -518,7 +518,7 @@ nav {
         position: absolute;
         color: #fff;
         background: rgba(255, 255, 255, 0.19);
-        padding:1px 10px 0px 10px;
+        padding:1px 10px 0 10px;
         border-radius: 80px;
         font-size: 18px;
         &:hover{
@@ -531,7 +531,7 @@ nav {
         position: absolute;
         color: #fff;
         background: rgba(255, 255, 255, 0.19);
-        padding: 1px 8px 0px 11px;
+        padding: 1px 8px 0 11px;
         border-radius: 80px;
         font-size: 18px;
         &:hover{
@@ -580,7 +580,7 @@ nav {
 .ninth-section-carousel{
     .owl-dots{
         position: absolute;
-        right: 0px;
+        right: 0;
         top: -35px;
         transition: all 0.5s!important;
         margin-top: 0;
@@ -624,9 +624,9 @@ nav {
     background: #fff;
     font-size: 16px;
     position: absolute;
-    right: 0px;
+    right: 0;
     color: #000;
-    margin-top: 0px;
+    margin-top: 0;
     width: 40px;
     height: 40px;
     border-radius: 60px;
@@ -798,8 +798,11 @@ nav {
 
     .item{
         img{
-            width:60%;
-            margin:0 auto;
+            width: 50%;
+            margin: 0 auto;
+            padding: 5px;
+            border: 3px solid #1e1841;
+            border-radius: 15px;
             @media (max-width: 599px) {
                 width:40%;
 
@@ -843,9 +846,9 @@ nav {
 
 }
 .footer-shadow{
-    -webkit-box-shadow:inset 0px 9px 21px 0px rgba(0, 0, 0, 0.13);
-    -moz-box-shadow:inset 0px 9px 21px 0px rgba(0, 0, 0, 0.13);
-    box-shadow:inset 0px 9px 21px 0px rgba(0, 0, 0, 0.13);
+    -webkit-box-shadow:inset 0 9px 21px 0 rgba(0, 0, 0, 0.13);
+    -moz-box-shadow:inset 0 9px 21px 0 rgba(0, 0, 0, 0.13);
+    box-shadow:inset 0 9px 21px 0 rgba(0, 0, 0, 0.13);
 }
 .footer{
     .contacts{
@@ -1025,10 +1028,10 @@ nav {
                 border: 1px solid #ddd;
                 overflow: hidden;
                 border-top: none;
-                -webkit-box-shadow: inset 0px -4px 5px 0px rgba(0, 0, 0, 0.15);
-                -moz-box-shadow: inset 0px -4px 5px 0px rgba(0, 0, 0, 0.15);
-                box-shadow: inset 0px -4px 5px 0px rgba(0, 0, 0, 0.15);
-                box-shadow: 0px 10px 28px 3px rgba(0, 0, 0, 0.23);
+                -webkit-box-shadow: inset 0 -4px 5px 0 rgba(0, 0, 0, 0.15);
+                -moz-box-shadow: inset 0 -4px 5px 0 rgba(0, 0, 0, 0.15);
+                box-shadow: inset 0 -4px 5px 0 rgba(0, 0, 0, 0.15);
+                box-shadow: 0 10px 28px 3px rgba(0, 0, 0, 0.23);
                 border-bottom-left-radius: 15px;
                 border-bottom-right-radius: 15px;
 
@@ -1063,11 +1066,11 @@ nav {
                         @media (min-width: 991px) {
                             margin-left: 190px;
                         }
-                        @media(min-width: 425px) {
+                        @media(min-width: 598px) {
                             &::before {
                                 content: '';
-                                width: 0px;
-                                height: 0px;
+                                width: 0;
+                                height: 0;
                                 border-style: solid;
                                 border-width: 15px 15px 15px 0;
                                 border-color: transparent #1d1c28 transparent transparent;
@@ -1086,6 +1089,9 @@ nav {
                         float: right;
                         padding: 12px;
                         display: inline-block;
+                        @media (max-width: 598px) {
+                            float: none;
+                        }
                         .td-social-facebook {
                             text-decoration: none;
                             background-color: #516eab;
@@ -1103,6 +1109,7 @@ nav {
                                 font-size: 14px;
                                 position: relative;
                                 top: 0;
+                                vertical-align: middle;
                                 &:before {
                                     content: 'f';
                                     font-style: normal;
@@ -1113,7 +1120,7 @@ nav {
                                 border-left: 1px solid rgba(255, 255, 255, 0.1);
                                 display: inline-block;
                                 position: relative;
-                                top: 0px;
+                                top: 0;
                                 line-height: 20px;
                                 padding-left: 5px;
                                 margin-left: 5px;
@@ -1163,8 +1170,8 @@ nav {
                         padding:0;
                         .text-onImg{
                             position: absolute;
-                            top:0px;
-                            background: rgba(0, 0, 0, 0.59);
+                            top:0;
+                            background: rgba(0, 0, 0, 0.39);
                             width: 100%;
                         p{
                             margin: 10px;
@@ -1334,7 +1341,7 @@ nav {
                 }
                }
                 .phone-img img{
-                    width: 100%;
+                    width: 235px;
                 }
             }
         }
@@ -1343,9 +1350,9 @@ nav {
                 display: block;
             }
             a{
-                -webkit-box-shadow: inset 0px 4px 5px 0px rgba(0,0,0,0.15);
-                -moz-box-shadow: inset 0px 4px 5px 0px rgba(0,0,0,0.15);
-                box-shadow: inset 0px 4px 5px 0px rgba(0,0,0,0.15);
+                -webkit-box-shadow: inset 0 4px 5px 0 rgba(0,0,0,0.15);
+                -moz-box-shadow: inset 0 4px 5px 0 rgba(0,0,0,0.15);
+                box-shadow: inset 0 4px 5px 0 rgba(0,0,0,0.15);
             }
         }
         .nav-tabs>li.active>a>p, .nav-tabs>li.active>a>p:focus, .nav-tabs>li.active>a>p:hover{
@@ -1433,9 +1440,9 @@ nav {
         margin-top: 100px;
     }
     .our-team{
-        -webkit-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.13);
-        -moz-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.13);
-        box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.13);
+        -webkit-box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.13);
+        -moz-box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.13);
+        box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.13);
         padding:20px;
         .col-lg-3{
             img{
@@ -1500,9 +1507,7 @@ nav {
                 background-color: transparent;
                 border: 1px solid transparent;
                 -moz-border-radius: 0;
-                -ms-border-radius: 0;
                 font-weight: 300;
-
                @media (min-width: 768px) {
                     padding: 7px;
                     color: #FFFFFF;
@@ -1514,12 +1519,11 @@ nav {
                     font-weight: 300;
                     overflow: hidden;
                     font-style: italic;
-                    font-size: 13px;
-
+                   font-size: 12px;
                    &::before {
                         content: '';
-                        width: 0px;
-                        height: 0px;
+                        width: 0;
+                        height: 0;
                         border-style: solid;
                         border-width: 16px 20px 16px 0;
                         border-color: transparent #191e41 transparent transparent;
@@ -1563,7 +1567,8 @@ nav {
             color: #fff;
             background-image: -moz-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
             background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
-            background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);            margin: 0;
+            background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
+            margin: 0;
             padding: 9px;
             text-align: center;
             font-size: 15px;
@@ -1662,16 +1667,16 @@ nav {
                 background-image: -webkit-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
                 background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);                padding: 5px 45px;
                 outline: none;
-                -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
-                -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
-                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+                -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+                -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+                box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
                 transition:all 0.5s;
                 border:none;
                 &:hover {
                  margin-top: 3px;
-                 -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
-                 -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
-                 box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+                 -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.75);
+                 -moz-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.75);
+                 box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.75);
              }
             }
         }
@@ -1688,9 +1693,9 @@ nav {
     }
     .container{
         padding:15px;
-        -webkit-box-shadow: 0px 0 21px 0px rgba(0, 0, 0, 0.13);
-        -moz-box-shadow: 0px 0 21px 0px rgba(0, 0, 0, 0.13);
-        box-shadow: 0px 0 21px 0px rgba(0, 0, 0, 0.13);
+        -webkit-box-shadow: 0 0 21px 0 rgba(0, 0, 0, 0.13);
+        -moz-box-shadow: 0 0 21px 0 rgba(0, 0, 0, 0.13);
+        box-shadow: 0 0 21px 0 rgba(0, 0, 0, 0.13);
     .section-box-inner{
         .cover-image-area{
             img{
@@ -1834,17 +1839,17 @@ nav {
                     background-image: -ms-linear-gradient( 0deg, rgb(9,11,26) 0%, rgb(29,34,74) 100%);
                     padding: 5px 45px;
                     outline: none;
-                    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
-                    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
-                    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+                    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+                    -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+                    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
                     transition:all 0.5s;
                     border:none;
                     border-radius:0;
                     &:hover {
                         margin-top: 3px;
-                        -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
-                        -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
-                        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+                        -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.75);
+                        -moz-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.75);
+                        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.75);
                     }
                 }
 
@@ -1855,7 +1860,7 @@ nav {
             .h4{
                 color: #000!important;
                 text-align: center!important;
-                padding: 0px 0 20px 0;
+                padding: 0 0 20px 0;
                 font-style: italic;
                 font-size: 20px;
             }
@@ -1890,7 +1895,7 @@ nav {
                         border-bottom-left-radius: 0;
                         border-top-left-radius: 0;
                         height: 35px;
-                        padding: 0px 10px;
+                        padding: 0 10px;
                         font-size: 13px;
                         color:#fff;
                         line-height: 35px;
